# simulator

./: CMakeLists.txt  package.xml
examples/: model_plugin_example.cpp  model_plugin_example.h  world_plugin_example.cpp  world_plugin_example.h
launch/: gazebo.launch.py
models/pool/: pool.sdf
param/: cobalt_sim.yaml  obstacles.yaml  simulator.yaml
scripts/: CMakeLists.txt  create_thruster_vsp.sh  sim_vision_network.py  start_switch.py
src/: CMakeLists.txt  buoyancy_improved.cpp  buoyancy_improved.h  localization_harness.cpp  maestro_emulator.cpp  maestro_emulator.h  marker_dropper.cpp  marker_dropper.h  parameter_server.cpp  roulette_spinner.cpp  roulette_spinner.h  simulator_bridge.cpp  thruster.cpp  thruster.h  thruster_plugin.cpp  thruster_plugin.h  torpedo_shooter.cpp  torpedo_shooter.h
